.........T [ZBX-6832] improved default templates (e.g., split "Template App Agentless" into 12 templates for each service) (asaveljevs, neogan, Sasha)
..F....... [ZBXNEXT-1851] hid American English, Greek and Polish translations from the frontend (Richlv)

Bug fixes:
..F....... [ZBX-6528] fixed highlighting unmonitored hosts in Host inventory page (Ivo)
A.F....... [ZBX-7259] fixed "Show lines" field in Configuration > Screen > cell element to be a value between 1 and 100 (Ivo)
..F....... [ZBX-7286] fixed displaying double quotes as HTML entities in trigger menu pop-ups (Ivo)
..F....... [ZBX-7284] fixed incorrect permissions when selecting a screen element from pop-up in screens and slideshow pages (Ivo)
.......PS. [ZBX-7282] fixed server or proxy crash while terminating database upgrade by TERM signal (Sasha)
...G...... [ZBX-7275] fixed eventlog sometimes returning garbage value (wiper)
.........T [ZBX-7269] fixed units and value type for vmware.vm.vfs.fs.size[{$URL},{HOST.HOST},{#FSNAME},pfree] item in "Template Virt VMware Guest" template (Sasha)
........S. [ZBX-7258] fixed vCenter VMs unique identifier for host names (Sasha)
..F....... [ZBX-7283] fixed latest data table layout issues when switching hosts and the "Show details" filter (Pavels)
..F....... [ZBX-5854] fixed host status indicator not displaying maintenance status in the host configuration form header (Pavels)
..F....... [ZBX-7242] fixed sortable table elements not to change width while dragging them (Ivo)
..F....... [ZBX-7213] fixed pre-loader image width and height for Internet Explorer (Ivo)
....I..... [ZBX-7273] fixed newlines in default data strings for Oracle (Sasha)
........S. [ZBX-7141] made it clear agent of which particular type is unavailable for unknown triggers (asaveljevs, Sasha)

--------------------------------------------------------------------------------
Changes for 2.1.9

New features:
...GI..PS. [ZBXNEXT-1477] added support of Windows eventlog source regex filter (Sasha)